<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_repeater"
    tools:context="hu.artklikk.android.deloitte.fragment.ProfileFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:padding="@dimen/text_top_bottom_padding"
        android:text="name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/sloth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/lajhar"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/relativeLayoutprofileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent">


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#8BC34A"
            app:civ_shadow_radius="10" />

        <ImageView
            android:id="@+id/crown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/crown"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:text="edit"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <TextView
        android:id="@+id/job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayoutprofileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="job"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonNominations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/job"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:textAllCaps="false"
        android:background="@drawable/dark_blue_button_selector"
        android:paddingLeft="@dimen/text_left_right_padding"
        android:paddingRight="@dimen/text_left_right_padding"
        android:text="@string/my_endorsements"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/relativeLayoutPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonNominations"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/text_left_right_padding"
        android:paddingRight="@dimen/text_left_right_padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prof_year"
                android:textColor="@color/light_blue" />

            <TextView
                android:id="@+id/pointInYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:paddingLeft="@dimen/text_left_right_padding"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranking"
                android:textColor="@color/light_blue" />

            <TextView
                android:id="@+id/rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:paddingLeft="@dimen/text_left_right_padding"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prof_cycle"
                android:textColor="@color/light_blue" />

            <TextView
                android:id="@+id/pointInCycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:paddingLeft="@dimen/text_left_right_padding"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/specialAnimals"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayoutPoints"
        android:background="@color/dark_blue"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="special animals"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/scrollSpecAnimals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewAnimals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_below="@+id/relativeLayoutPoints"
        android:layout_toLeftOf="@+id/specialAnimals"
        android:background="@color/light_blue"
        android:text="@string/hello_blank_fragment" />


</RelativeLayout>
