<?xml version="1.0" encoding="utf-8"?>
<hu.artklikk.android.deloitte.views.PostView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:animateLayoutChanges="true"
  android:background="@drawable/combined_shape3x"
  android:orientation="vertical">
<LinearLayout
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/imgAnimal"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="17dp"
      tools:src="@drawable/mokus" />

    <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginLeft="86dp"
      android:layout_marginRight="12dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/txtEndorseDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/n_pts_in_s"
        android:textSize="18dp"
        tools:text="2 pts in Knowledge Sharing" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/txtFrom"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_vertical"
          android:text="@string/from_s"
          tools:text="from Wolfgang Amadeus Mozart" />

        <com.mikhaellopez.circularimageview.CircularImageView
          android:id="@+id/imgFrom"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginLeft="24dp"
          android:src="@drawable/bagoly"
          app:civ_border_color="@color/see_blue"
          app:civ_border_width="2dp" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/txtTo"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_vertical"
          android:lines="2"
          android:text="@string/to_s"
          tools:text="to Johann Sebastian Bach" />

        <com.mikhaellopez.circularimageview.CircularImageView
          android:id="@+id/imgTo"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginLeft="24dp"
          android:src="@drawable/bagoly"
          app:civ_border_color="@color/see_blue"
          app:civ_border_width="2dp" />
      </LinearLayout>
    </LinearLayout>

    <TextView
      android:id="@+id/txtPostText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/linearLayout"
      android:layout_marginBottom="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginRight="12dp"
      android:layout_marginTop="6dp"
      android:textSize="16dp"
      tools:text="You are great composer. Everibody Liebst Du! Du bist unsere beste komposierte mucho! Thank you for your art." />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/txtPostText"
      android:orientation="horizontal"
      android:padding="6dp">

      <TextView
        android:id="@+id/txtLikeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@plurals/no_of_likes"
        android:textStyle="bold"
        android:layout_marginLeft="6dp" />

      <TextView
        android:id="@+id/txtCommentCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingLeft="6dp"
        android:text="@plurals/no_of_comments"
        android:textStyle="bold"
        android:layout_marginLeft="6dp" />

      <TextView
        android:id="@+id/txtPostDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="right"
        tools:text="2016.08.10"
        android:layout_marginRight="6dp" />
    </LinearLayout>

  </RelativeLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <com.andexert.library.RippleView
      android:id="@+id/btnHeart"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:layout_marginRight="1dp"
      android:layout_weight="1"
      android:background="@drawable/balkek"
      app:rv_centered="true">
      <ProgressBar
        android:id="@+id/progLike"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_centerInParent="true"/>
      <ImageView
        android:id="@+id/imgHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="6dp"
        android:contentDescription="@string/like_post"
        android:src="@drawable/heart_shape_3x" />

    </com.andexert.library.RippleView>

    <com.andexert.library.RippleView
      android:id="@+id/btnComment"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:layout_marginLeft="1dp"
      android:layout_weight="1"
      android:background="@drawable/jobbkek"
      app:rv_centered="true">

      <ProgressBar
        android:id="@+id/progComment"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginRight="12dp"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_centerInParent="true"/>
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="6dp"
        android:contentDescription="@string/view_and_write_comments"
        android:src="@drawable/comi_shape_3x"
        android:id="@+id/imgComment" />
    </com.andexert.library.RippleView>

  </LinearLayout>

  <!--<LinearLayout-->
    <!--android:id="@+id/linPostComment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--android:visibility="gone"-->
    <!--tools:visibility="visible">-->

    <!--<FrameLayout-->
      <!--android:layout_width="match_parent"-->
      <!--android:layout_height="wrap_content"-->
      <!--android:paddingLeft="18dp"-->
      <!--android:paddingRight="18dp"-->
      <!--android:paddingTop="12dp"-->
      <!--android:paddingBottom="8dp">-->

      <!--<hu.artklikk.android.deloitte.views.CommentView-->
        <!--android:id="@+id/firstComment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:comm_color="blue"-->
        <!--app:comm_maxLines="2"/>-->
    <!--</FrameLayout>-->

    <!--<TextView-->
      <!--android:id="@+id/txtReadNMore"-->
      <!--android:layout_width="wrap_content"-->
      <!--android:layout_height="wrap_content"-->
      <!--android:layout_gravity="right"-->
      <!--android:layout_marginBottom="8dp"-->
      <!--android:layout_marginRight="18dp"-->
      <!--android:text="@plurals/read_n_more"-->
      <!--tools:text="read 3 more"-->
      <!--android:textSize="12dp"-->
      <!--android:textColor="@color/light_blue" />-->
  <!--</LinearLayout>-->

</LinearLayout>
<hu.artklikk.android.deloitte.views.CommentsListView
  android:layout_width="match_parent"
  android:layout_height="400dp"
  android:visibility="gone"
  android:id="@+id/commentsList" />
</hu.artklikk.android.deloitte.views.PostView>